; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/rsa/extr_rsa_x931.c_RSA_X931_hash_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/rsa/extr_rsa_x931.c_RSA_X931_hash_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RSA_X931_hash_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 131, label %5
    i32 130, label %6
    i32 129, label %7
    i32 128, label %8
  ]

5:                                                ; preds = %1
  store i32 51, i32* %2, align 4
  br label %10

6:                                                ; preds = %1
  store i32 52, i32* %2, align 4
  br label %10

7:                                                ; preds = %1
  store i32 54, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  store i32 53, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %8, %7, %6, %5
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
